--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,13 @@ plugins:
 relative_links:
   enabled: true
   collections: true
+include:
+  - CONTRIBUTING.md
+  - README.md
+  - LICENSE.md
+  - COPYING.md
+  - CODE_OF_CONDUCT.md
+  - CONTRIBUTING.md
+  - ISSUE_TEMPLATE.md
+  - PULL_REQUEST_TEMPLATE.md
 markdown: kramdown
